# auto-finance-rag-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/synthetic/company_policy_documents/: add_on_products_policy.md  complaint_handling_policy.md  eligibility_policy.md  loan_pricing_policy.md  required_documents_policy.md
scripts/: build_vectorstore.py  check_chunk_quality.py  clean_complaints.py  create_synthetic_docs.py  download_project1_data.sh  evaluate_retrieval.py  prepare_credit_data.py  preview_all_chunks.py  preview_chunks.py  preview_loaded_documents.py  test_agent_memory.py  test_credit_prediction.py  test_grounded_answer.py  test_intent_classifier.py  test_loan_calculator.py  test_markdown_chunking.py  test_pdf_chunking.py  test_policy_qna_node.py  test_rag_service.py  test_rag_timing_twice.py  test_retrieval.py  test_retriever_service.py  train_credit_model.py
src/app/services/: ingestion.py
src/auto_finance_rag_agent/: main.py  schemas.py
src/auto_finance_rag_agent/agent/: graph.py  intent.py  nodes.py  state.py
src/auto_finance_rag_agent/api/: routes.py
src/auto_finance_rag_agent/generation/: answer_generator.py  rag_service.py
src/auto_finance_rag_agent/ingestion/: chunkers.py  loader.py  pipeline.py
src/auto_finance_rag_agent/ml/: credit_prediction.py  credit_training.py
src/auto_finance_rag_agent/retrieval/: retriever.py  vector_store.py
src/auto_finance_rag_agent/tools/: complaint_trends.py  loan_calculator.py  missing_documents.py
src/auto_finance_rag_agent/ui/: gradio_app.py
